<resources>
    <string name="title_service">Notification LdPro</string>
    <string name="content_service">Bạn có một tin nhắn mới.</string>
    <string name="notification_listener_service">Truy cập thông báo!</string>
    <string name="notification_listener_service_explanation">Hãy cho phép phần mềm được truy cập thông báo của điện thoại để kích hoạt tính năng nhắn tin.</string>
    <string name="no">CANCEL</string>
    <string name="app_name_string">Template</string>
    <string name="ok">OK</string>
    <string name="error">Error</string>
    <string name="close">Close</string>
    <string name="remove_message">
       Xóa Khách \n\nSẽ xóa hết dữ liệu chat từ khách này, không thể khôi phục và không thể tải lại tin nhắn!</string>
    <string name="str_not_connect_internet">Kiểm tra lại kết nối mạng</string>
    <string-array name="don_vi_chuyen_xien_di">
        <item>1. Chuyển theo tiền</item>
        <item>2. Chuyển theo điểm</item>
    </string-array>
    <string-array name="tra_loi_tn">
        <item>1. OK tin và nội dung phân tích</item>
        <item>2. Chỉ Ok tin</item>
        <item>3. Không trả lời</item>
        <item>4. Ok tin nguyên mẫu</item>
        <item>5. Chỉ Ok tin (ngay khi nhận)</item>
        <item>6. Ok nguyên mẫu</item>
    </string-array>
    <string-array name="don_vi_tinh_tien">
        <item>1. Giữ nguyên giá</item>
        <item>2. Nhân 10 khi là điểm</item>
        <item>3. Nhân 10 tất cả xiên</item>
    </string-array>
    <string-array name="nhan_chot_tien">
        <item>1. Chốt tiền trong ngày</item>
        <item>2. Chốt có công nợ</item>
    </string-array>
    <string-array name="bao_loi_don_vi">
        <item>1. Không báo lỗi sai đơn vị</item>
        <item>2. Báo lỗi khi sai đơn vị</item>
    </string-array>
    <string-array name="khach_de">
        <item>1. Thường (de = deb, de8 = det)</item>
        <item>2. Đề 8 (de = det)</item>
    </string-array>
    <string-array name="chuyen_de_7_8">
        <item>1. Giữ nguyên (HS = 1)</item>
        <item>2. Đề 8 -> 7 (HS = 1,143)</item>
        <item>3. Đề 7 -> 8 (HS = 0,875)</item>
    </string-array>

    <string-array name="message">
        <item>tin nhắn chưa đọc.</item>
        <item>new messages</item>
        <item>đã gửi tập tin cho bạn"</item>
        <item>cảm xúc với tin nhắn bạn gửi</item>
        <item>hình động cho bạn</item>
        <item>thành viên của nhóm</item>
        <item>thêm vào nhóm</item>
        <item>gửi ảnh cho bạn</item>
        <item>cuộc trò chuyện</item>
        <item>đã gửi liên kết cho bạn</item>
        <item>hà nội thông tin người dân</item>
        <item>vừa quay lại đăng ảnh</item>
        <item>hà nội có mây rải rác</item>
        <item>đầu tuần hà nội</item>
    </string-array>

    <string-array name="titleMessage">
        <item>nhóm:</item>
        <item>Bộ Y tế</item>
    </string-array>

    <string-array name="tin_nhan">
        <item> (1 tin nhắn)</item>
        <item> (2 tin nhắn)</item>
        <item> (3 tin nhắn)</item>
        <item> (4 tin nhắn)</item>
        <item> (5 tin nhắn)</item>
        <item> (6 tin nhắn)</item>
        <item> (7 tin nhắn)</item>
        <item> (8 tin nhắn)</item>
        <item> (9 tin nhắn)</item>
        <item> (10 tin nhắn)</item>
        <item> (11 tin nhắn)</item>
        <item> (12 tin nhắn)</item>
        <item> (13 tin nhắn)</item>
        <item> (14 tin nhắn)</item>
        <item> (15 tin nhắn)</item>
    </string-array>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="str_ok">OK</string>
    <string name="str_cancel">Huỷ</string>
    <string name="str_sign_in">Đăng nhập</string>
    <string name="str_hint_user_name">Tài khoản</string>
    <string name="str_hint_password">Mật khẩu</string>
    <string name="str_title_live_lottery">Tính tiền trực tiếp từ 18h15 đến 18h30</string>
    <string name="str_xem_lo">Xem Lô</string>
    <string name="str_xem_xien">Xem Xiên</string>

    <!--Start Menu-->
    <string name="str_home">Trang chủ</string>
    <string name="str_list_customer">Danh sách khách hàng</string>
    <string name="str_setting">Cài đặt</string>
    <string name="str_message">Quản lý tin nhắn</string>
    <string name="str_message_template">Các tin nhắn mẫu</string>
    <!--End Menu-->

    <!-- Start message-->
    <string name="lbl_message">Cài đặt thông báo</string>
    <!-- End message-->

    <!--Start Home-->
    <string name="lbl_home_1">Ngày:</string>
    <string name="lbl_home_2">Menu</string>
    <!--End Home-->

    <!--Start Setting-->
    <string name="lbl_setting_1">Trả thưởng áp nạm 3 càng:</string>
    <string name="lbl_setting_2">Đơn vị chuyển xiên đi:</string>
    <string name="lbl_setting_3">Làm tròn tiền khi xuất số:</string>
    <string name="lbl_setting_4">Giới hạn kí tự khi xuất tin nhắn:</string>
    <string name="lbl_setting_5">Nhắn hết giờ (khi nhận tin quá giờ):</string>
    <string name="lbl_setting_6">Xử lý tin nhắn trùng:</string>
    <string name="lbl_setting_7">Chọn dạng báo cáo:</string>
    <string name="lbl_setting_8">Sắp xếp số nhận:</string>
    <string name="lbl_setting_9">Trả thưởng nháy lô:</string>
    <string name="lbl_setting_10"><![CDATA[Báo lỗi (lô > 1000/đề>5000/xiên,bx>2000) thiếu đơn vị]]></string>
    <string name="lbl_setting_11">Tách xiên cho tin chốt tiền:</string>
    <string name="lbl_setting_12">Cài đặt báo thiếu tin:</string>
    <string name="title_setting">Cài đặt</string>
    <string name="str_add_customer">Thêm khách hàng</string>
    <string name="str_guess">Khách</string>
    <string name="str_phone_book">Danh bạ</string>
    <string name="str_customer_name">Tên khách hàng</string>
    <string name="str_add">Thêm</string>
    <string name="str_phone_number">Số điện thoại</string>
    <string name="str_validate_customer_name">Vui lòng điền tên khách hàng</string>
    <string name="str_validate_phone">Nhập sai định dạng số điện thoại</string>
    <string name="str_edit">Sửa</string>
    <string name="message_delete">xóa</string>
    <string name="str_save">Lưu lại</string>
    <string name="str_khong_nhan_de">Nhập khống: \nví dụ: 100 so x 10000 \nđầu 1 x 4000</string>
    <string name="str_title_khong_nhan_so">BẢNG KHỐNG NHẬN SỐ \n(Tự động trả lại số thừa)</string>
    <!--End Setting-->


    <!--Mess temp start-->

    <string name="message_template">Mẫu tin nhắn</string>
    <string name="title_introduction">Cảm ơn quý khách đã sử dụng phần mềm LdPro, ưu điểm đầu tiên của phần mềm là xử lý được tiếng Việt có dấu và tự động nhận dạng tất cả các dạng tin nhắn</string>
    <string name="description">Quý khách hãy đọc và thuộc lòng các dạng để nắm được cách xử lý dữ liệu của LdPro</string>
    <string name="title_one">Viết tắt các dạng: </string>
    <string name="title_two">Đầu đb</string>
    <string name="title_three">Đầu nhất</string>
    <string name="title_four">Đít nhất</string>
    <string name="title_five">Tổng chia 3</string>
    <string name="title_six">Chia 3 dư 1</string>
    <string name="title_seven">Chia 3 dư 2</string>
    <string name="title_eight">Không chia 3</string>
    <string name="title_night">Tổng trên 10</string>
    <string name="title_ten">Tổng dưới 10</string>
    <string name="title_eleven">Tổng 10</string>
    <string name="title_twelve">xg2 010,030,78,89,60 x 10</string>
    <string name="title_thirteen">xg3 010,030,78,89,60 x 10</string>
    <string name="title_fourteen">xg4 010,030,78,89,60 x 10</string>
    <string name="title_fifteen">De dan 18 bor kep x 10</string>
    <string name="title_sixteen">De boj 02,04 x 10</string>
    <string name="title_seventeen">De giap ty x 100, de giap chuột x 100</string>


    <string name="description_one">dea: đề 2 số đầu giải ĐB(đề đầu ĐB/ đầu ĐB)deb: đề 2 số cuối giải đbdet: đề 8 số cuối giải đb nhưng trả thương 80.000(đề 8/đề ăn 8)dec: đề 2 số đầu giải nhất(đề đầu nhất/ đầu nhất)ded: đề 2 số cuối giải nhất(đề đít nhất/ đít nhất)</string>
    <string name="description_two">2 số đầu giải đặc biệt</string>
    <string name="description_three">2 số đầu giải nhất</string>
    <string name="description_four">2 số đầu cuối giải nhất</string>
    <string name="description_five">Các số chia hết cho 3</string>
    <string name="description_six">Các số chia cho 3 dư 1</string>
    <string name="description_seven">Các số chia cho 3 dư 2</string>
    <string name="description_eight">Các số không chia hết cho 3</string>
    <string name="description_night">Các số có tổng lớn hơn 10</string>
    <string name="description_ten">Các số có tổng bé hơn 10</string>
    <string name="description_eleven">Phần mềm sẽ báo lỗi vì không có tổng 10, chỉ có tổng 0 hoặc tổng 1 và 0 thì ghi tổng 01</string>
    <string name="description_twelve">Phần mềm sẽ tự động ghép xiên 2 của tất cả các số với nhau, hãy kiểm tra cẩn thận có số giống nhau khi phần mềm báo lỗi</string>
    <string name="description_thirteen">Phần mềm sẽ tự động ghép xiên 3 của tất cả các số với nhau, hãy kiểm tra cẩn thận có số giống nhau khi phần mềm báo lỗi</string>
    <string name="description_fourteen">Phần mềm sẽ tự động ghép xiên 4 của tất cả các số với nhau, hãy kiểm tra cẩn thận có số giống nhau khi phần mềm báo lỗi</string>
    <string name="description_fifteen">Chữ bo có 2 nghĩa là bỏ và bộ nên chữ bỏ phải thêm chữ \u0027r\u0027 thành bor</string>
    <string name="description_sixteen">Chữ bo có 2 nghĩa là bỏ và bộ nên chữ bộ phải thêm chữ \u0027j\u0027 thành boj</string>
    <string name="description_seventeen">Các con giáp sẽ được ghi bằng cách viết giap + tên con giáp</string>
    <string name="title_database">Hãy chọn trang web để tải kết quả!</string>
    <string name="title_xoso_me">Từ trang \n xoso.me</string>
    <string name="title_ket_qua_net">Từ trang \n ketqua.net</string>
    <string name="title_he_thong">Từ hệ thống</string>
    <string name="tinh_tien_khi_co_kq">- Tính tiền thủ công: sau khi có KQ.</string>
    <string name="tinh_tien_thu_cong">Tính tiền thủ công</string>
    <string name="xoa_du_lieu">- Xóa hết số liệu trong cơ sở dữ liệu.</string>
    <string name="xoa_co_so_du_lieu">Xóa cơ sở dữ liệu</string>
    <!--Mess temp end-->
</resources>