<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="@dimen/dimen_8dp"
    android:paddingTop="@dimen/dimen_8dp"
    android:paddingEnd="@dimen/dimen_8dp"
    tools:context=".presentation.main.MainActivity"
    tools:ignore="RtlSymmetry">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title_database"
        android:textColor="@color/red" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/xsMe"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_xoso_me"
                android:textColor="@color/red" />

            <RadioButton
                android:id="@+id/kqNet"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_ket_qua_net"
                android:textColor="@color/red" />

            <RadioButton
                android:id="@+id/heThong"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/title_he_thong"
                android:textColor="@color/red" />
        </RadioGroup>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinh_tien_khi_co_kq"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/tinh_tien_thu_cong"
        android:textAllCaps="true" />

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xoa_du_lieu"
        android:textColor="@color/black"
        android:textSize="@dimen/dimen_16sp" />

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/xoa_co_so_du_lieu"
        android:textAllCaps="true" />

    <WebView
        android:id="@+id/web_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />
</androidx.appcompat.widget.LinearLayoutCompat>