<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TableRow android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:hint="@string/str_customer_name"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:nextFocusDown="@id/edt_phone"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button style="@style/ButtonInApp"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_8dp"
            android:layout_width="120dp"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:textSize="@dimen/dimen_12sp"
            android:id="@+id/btn_add"
            android:text="@string/str_add"/>
    </TableRow>
    <TableRow android:layout_width="match_parent"
        android:paddingHorizontal="@dimen/dimen_8dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:layout_height="wrap_content">
        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:hint="@string/str_phone_number"
            app:endIconMode="clear_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edt_phone"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="number"
                android:maxLength="10"
                android:singleLine="true" />
        </com.google.android.material.textfield.TextInputLayout>
        <Button style="@style/ButtonInApp"
            android:layout_gravity="center_vertical"
            android:paddingHorizontal="@dimen/dimen_8dp"
            android:layout_width="120dp"
            android:layout_marginLeft="@dimen/dimen_12dp"
            android:textSize="@dimen/dimen_12sp"
            android:text="@string/str_phone_book"/>
    </TableRow>
    <RadioGroup
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:checkedButton="@id/rb_guess"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/str_guess"
            android:id="@+id/rb_guess"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="Chủ"
            android:layout_height="wrap_content"/>
        <RadioButton
            android:layout_width="0dp"
            android:layout_weight="2"
            android:text="Vừa khách vừa chủ"
            android:layout_height="wrap_content"/>
    </RadioGroup>
    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="match_parent"
        android:id="@+id/rcv_setting_customer"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        android:layout_weight="1"
        android:layout_height="@dimen/dimen_0dp"/>
</androidx.appcompat.widget.LinearLayoutCompat>