<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginLeft="@dimen/dimen_6dp"
            android:gravity="center"
            android:text="@string/str_title_live_lottery"
            android:textColor="@color/red"
            android:textSize="@dimen/dimen_15dp"
            android:textStyle="bold" />

        <Switch
            android:id="@+id/btn_switch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:checked="true"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </LinearLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ln_web_view"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical">

        <WebView
            android:id="@+id/web_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_5dp"
        android:background="@color/black" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_xem_lo"
                android:textColor="@color/red"
                android:textStyle="bold" />

            <RadioButton
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/str_xem_xien"
                android:textColor="@color/red"
                android:textStyle="bold" />
        </RadioGroup>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen_0_5dp"
        android:background="@color/black" />

</LinearLayout>